Changed use of deprecated methods for boxing primitives.